improve profile ui

--- a/private/skins/biscuit/templates/components/_index_submission_2.twig
+++ b/private/skins/biscuit/templates/components/_index_submission_2.twig
@@ -1,4 +1,4 @@
-<div class="content-entry-index">
+<div class="content-entry-small">
     <div class="content-image-container">
         <a href="/view/{{ submission.id }}" class="content-image-link">
             <img src="{{ thumbnail(submission.id, submission.type, submission.bools.custom_thumbnail) }}"
