--- a/scss/biscuit/default/_content_box.scss
+++ b/scss/biscuit/default/_content_box.scss
@@ -13,7 +13,7 @@
 
     &.profile-stats
     {
-        background: darken($content-box-border-color, 2.5%);
+        background: darken($content-box-background-color, 10%);
         text-align: center;
         font-weight: normal;
         font-size: 12px;
@@ -38,6 +38,13 @@
     overflow: hidden;
     word-break: break-word;
     border-radius: 4px;
+
+    &.content-box-profile-submissions
+    {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 10px;
+    }
 
     .content-entry
     {
@@ -64,8 +71,14 @@
         }
     }
 
-    .content-entry-index
+    .content-entry-small
     {
+        &.content-entry-profile
+        {
+            width: 125px;
+            height: 140px;
+        }
+
         max-height: 140px;
         text-align: center;
 
@@ -74,7 +87,7 @@
             font-size: 10px;
             font-weight: normal;
 
-            max-width: 125px;
+            max-width: 100%;
             overflow: hidden;
             text-overflow: ellipsis;
             display: inline-block;
