--- a/private/skins/biscuit/templates/components/_comment.twig
+++ b/private/skins/biscuit/templates/components/_comment.twig
@@ -11,11 +11,13 @@
                 <small>Null comment</small>
             {% endif %}
 
+            {% if comment.id %}
             <a class="reply-button" data-comment-id="{{ comment.id }}">Reply</a>
             <div class="reply-form" id="reply-form-{{ comment.id }}" style="display: none;">
                 <textarea class="form-submit-wide" id="reply_contents_{{ comment.id }}" maxlength="1000"></textarea>
                 <button class="button button-secondary submit-reply-button" data-comment-id="{{ comment.id }}">Submit Reply</button>
             </div>
+            {% endif %}
 
             <div class="replies" id="replies-{{ comment.id }}">
                 {% for reply in comment.replies %}
