--- a/scss/biscuit/default/_jumbotron.scss
+++ b/scss/biscuit/default/_jumbotron.scss
@@ -7,6 +7,10 @@
       }
     }
 
+    &.fulptube {
+      background: #d90808 url("/assets/biscuit_banner_fulp.svg");
+    }
+
     background: #FF8A00 url("/assets/biscuit_banner.svg");
     background-size: cover;
     color: white;
