--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -140,6 +140,14 @@
                     </div>
                 </div>
             {% endif %}
+            {% if is_chaziz_sb %}
+                <div class="section">
+                    <div class="section-title">
+                        <h1>Discord</h1>
+                    </div>
+                    <iframe src="https://discord.com/widget?id=1209695092554858548&theme=dark" width="100%" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                </div>
+            {% endif %}
             <div class="section">
                 <div class="section-title">
                     <h1>Recent Tags</h1>
