--- a/scss/biscuit/default/_watch_page.scss
+++ b/scss/biscuit/default/_watch_page.scss
@@ -9,16 +9,6 @@
   }
 }
 
-
-.content-box {
-  &.watch-edit {
-    a {
-      margin-right: 7px;
-      color: white;
-    }
-  }
-}
-
 .watch-box {
   background: $content-box-background-color;
   border: 1px solid $content-box-border-color;
@@ -26,6 +16,12 @@
   overflow: hidden;
   word-break: break-word;
   border-radius: 4px;
+
+  .watch-box-edit {
+    a {
+      margin-right: 7px;
+    }
+  }
 
   .watch-box-info {
     .section-title {
@@ -38,6 +34,15 @@
   .watch-box-description {
     margin: 0 auto;
     word-wrap: break-word;
+
+    .watch-box-description-info {
+      font-weight: 600;
+    }
+
+    .watch-box-description-info-small {
+      color: gray;
+      font-size: 11px;
+    }
   }
 
   .watch-box-row {
@@ -68,8 +73,8 @@
       width: 75%;
 
       .watch-box-profile-picture {
-        width: 60px;
-        height: 60px;
+        width: 52px;
+        height: 52px;
         margin-right: 10px;
       }
 
@@ -79,11 +84,10 @@
         .watch-box-author-userlink {
           font-size: 14px;
         }
+      }
 
-        .watch-box-author-info-small {
-          color: gray;
-          font-size: 11px;
-        }
+      .watch-box-author-follow {
+        margin-top: 6px;
       }
     }
   }
