--- a/private/skins/biscuit/templates/profile.twig
+++ b/private/skins/biscuit/templates/profile.twig
@@ -149,7 +149,7 @@
         <div class="section">
             <div class="section-title">
                 <h1>Recent submissions</h1>
-                <a href="browse">More</a>
+                <a href="/browse?user={{ data.username }}">More</a>
             </div>
             <div class="content-box">
                 {% for submission in data.submissions %}
