--- a/private/skins/biscuit/templates/settings.twig
+++ b/private/skins/biscuit/templates/settings.twig
@@ -37,7 +37,7 @@
 
 
             <div class="form-input">
-                <label for="about">Username color:</label>
+                <label for="customcolor">Username color:</label>
                 <input name="customcolor" type="color" value="{{ user_data.customcolor | default('523bb8') }}">
             </div>
 
