--- a/private/skins/finalium/templates/settings.twig
+++ b/private/skins/finalium/templates/settings.twig
@@ -2,42 +2,41 @@
 {% block title %}Settings{% endblock %}
 
 	{% block content %}
-    {% if error %}
-        <div class="header_message header-danger" role="alert">{{ error }}</div>
-    {% endif %}
-<form action="settings" method="post" enctype="multipart/form-data">
-	<table class="settings">
-		<caption><h3>Your account</h3></caption>
-		<tr>
-			<th>Option</th>
-			<th>Value</th>
-		</tr>
-		<tr>
-			<td class="a">Username</td>
-			<td class="b">{{ user_data.name }}</td>
-		</tr>
-		<tr>
-		<tr>
-			<td class="a">Email address</td>
-			<td class="b">{{ user_data.name }}</td>
-		</tr>
-		<tr>
-			<td class="a">Password</td>
-			<td class="b">
-				<input type="password" name="current_pass" size="30" maxlength="256"
-					   placeholder="Current password"><br>
-				<input type="password" name="pass" size="30" maxlength="256" placeholder="New password"><br>
-				<input type="password" name="pass2" size="30" maxlength="256"
-					   placeholder="Confirm new password">
-			</td>
-		</tr>
-		<tr>
-			<td class="a"></td>
-			<td class="b"><a href="/userexport">Export your user data</a></td>
-		</tr>
-	</table>
+		{% if error %}
+			<div class="header_message header-danger" role="alert">{{ error }}</div>
+		{% endif %}
+		<form action="settings" method="post" enctype="multipart/form-data">
+		<table class="settings">
+			<caption><h3>Your account</h3></caption>
+			<tr>
+				<th>Option</th>
+				<th>Value</th>
+			</tr>
+			<tr>
+				<td class="a">Username</td>
+				<td class="b">{{ user_data.name }}</td>
+			</tr>
+			<tr>
+			<tr>
+				<td class="a">Email address</td>
+				<td class="b">{{ user_data.name }}</td>
+			</tr>
+			<tr>
+				<td class="a">Password</td>
+				<td class="b">
+					<input type="password" name="current_pass" size="30" maxlength="256"
+						   placeholder="Current password"><br>
+					<input type="password" name="pass" size="30" maxlength="256" placeholder="New password"><br>
+					<input type="password" name="pass2" size="30" maxlength="256"
+						   placeholder="Confirm new password">
+				</td>
+			</tr>
+			<tr>
+				<td class="a"></td>
+				<td class="b"><a href="/userexport">Export your user data</a></td>
+			</tr>
+		</table>
 
-	{% if userbandata != true %}
 		<table class="settings">
 			<caption><h3>Your profile</h3></caption>
 			<tr>
@@ -48,6 +47,12 @@
 				<td class="a">Profile picture</td>
 				<td class="b">
 					<input class="form-control" type="file" name="profilePicture" id="profilePicture">
+				</td>
+			</tr>
+			<tr>
+				<td class="a">Profile banner (on Biscuit frontend)</td>
+				<td class="b">
+					<input class="form-control" type="file" name="profileBanner" id="profileBanner">
 				</td>
 			</tr>
 			<tr>
@@ -67,15 +72,28 @@
 									 value="{{ user_data.customcolor | default('523bb8') }}"></td>
 			</tr>
 		</table>
-	{% else %}
-		<p>Profile options are not available to users who are currently banned.</p>
-	{% endif %}
 
-	<!-- <h3>Miscellaneous</h3>
-	<table class="settings">
-	</table> -->
-	
-	<div class="right">
-		<input type="submit" id="upload" name="save" class="button button-primary" value="Save Changes">
-	</div>
+		<table class="settings">
+			<caption><h3>Filtering</h3></caption>
+			<tr>
+				<th>Option</th>
+				<th>Value</th>
+			</tr>
+			<tr>
+				<td class="a">Sensitive content</td>
+				<td class="b">
+					<input type="checkbox" name="rating" id="rating" value="true" {% if user_data.comfortable_rating == "mature" %}checked{% endif %}>
+					<label for="rating"> Enable sensitive content</label><br>
+				</td>
+			<tr>
+				<td class="a">Blacklisted tags</td>
+				<td class="b">
+					<textarea class="form-submit" name="blacklisted_tags" rows="5" cols="80" wrap="hard">{% for tag in user_data.blacklisted_tags %}{{ tag }},{% endfor %}</textarea>
+				</td>
+			</tr>
+		</table>
+
+		<div class="right">
+			<input type="submit" id="upload" name="save" class="button button-primary" value="Save Changes">
+		</div>
 	{% endblock %}
